fix(styles): --> Body | fix horizontal scrolling problem

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,6 +63,7 @@ body {
   font-weight: 300;
   position: relative;
   min-height: 100dvh;
+  overflow-x: hidden;
 }
 
 .shape-1 {
